[package]
name = "nina"
version = "0.2.1"
description = "Nina - A self-publishing protocol"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nina"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["test"]
test = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
solana-program = "1.9.4"
thiserror = "1.0"
mpl-token-metadata = { version="1.2.4", features = [ "no-entrypoint" ] }
