[package]
name = "nina"
version = "0.2.14"
description = "Nina - A self-publishing protocol"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nina"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["test"]
test = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
solana-program = "1.10.29"
thiserror = "1.0"
mpl-token-metadata = { version="1.2.4", features = [ "no-entrypoint" ] }
spl-associated-token-account = "1.0.5"
