[package]
name = "nina"
version = "0.3.2"
description = "Nina - A self-publishing protocol"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nina"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["test"]
test = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
solana-program = "=1.17.22"
thiserror = "1.0"
mpl-token-metadata = { version="3.2.3" }
spl-associated-token-account = "2.3.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]} 
toml_edit = "=0.21.0" 